[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["ferasezzaldeen <ferasezaldeen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
jupyterlab = "^3.1.7"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
